# ollama-react-travel-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: test_agent.py
